Bug 1660636 - Use download attribute filename instead of File.name. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D88571